Changed starting location to London

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                   </div>
                 </form>
               </div>
-              <div class="tab-pane fade" id="boroughs-tab">
+              <!-- <div class="tab-pane fade" id="boroughs-tab">
                 <p>Borough data courtesy of <a href="http://www.nyc.gov/html/dcp/pdf/bytes/nybbwi_metadata.pdf" target="_blank">New York City Department of City Planning</a></p>
               </div>
               <div class="tab-pane fade" id="subway-lines-tab">
@@ -200,7 +200,7 @@
               </div>
               <div class="tab-pane fade" id="museums-tab">
                 <p>Museum data courtesy of <a href="https://data.cityofnewyork.us/Recreation/Museums-and-Galleries/sat5-adpb" target="_blank">NYC Department of Information & Telecommunications (DoITT)</a></p>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="modal-footer">
